// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectDropdown should render 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-0-label"
    class="relative"
    role="combobox"
  >
    <label
      for="dropdown-select"
      id="downshift-0-label"
    >
      <div
        class="relative flex items-center w-full flex-inline"
      >
        <div
          class="flex w-full px-4 py-3 pr-12 overflow-hidden border rounded cursor-pointer m-h-20 shadow-sm bg-theme-background border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 hover:outline-none hover:border-theme-primary"
        />
        <div
          class="w-12 px-4 py-5 -ml-12 text-lg pointer-events-none text-theme-neutral-dark"
        >
          <div
            class=""
          >
            <div
              class="sc-AxjAm cpczEI"
              height="1em"
              width="1em"
            >
              <svg>
                chevron-down.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
    </label>
    <div
      class="relative btn-group"
    >
      <input
        aria-autocomplete="list"
        aria-labelledby="downshift-0-label"
        autocomplete="off"
        id="downshift-0-input"
        readonly=""
        type="hidden"
        value=""
      />
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="dropdown-toggle"
        data-testid="select-dropdown__toggle"
        data-toggle="dropdown"
        id="dropdown-select"
        type="button"
      />
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render ignoring option.value property 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-1-label"
    class="relative"
    role="combobox"
  >
    <label
      for="dropdown-select"
      id="downshift-1-label"
    >
      <div
        class="relative flex items-center w-full flex-inline"
      >
        <div
          class="flex w-full px-4 py-3 pr-12 overflow-hidden border rounded cursor-pointer m-h-20 shadow-sm bg-theme-background border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 hover:outline-none hover:border-theme-primary"
        />
        <div
          class="w-12 px-4 py-5 -ml-12 text-lg pointer-events-none text-theme-neutral-dark"
        >
          <div
            class=""
          >
            <div
              class="sc-AxjAm cpczEI"
              height="1em"
              width="1em"
            >
              <svg>
                chevron-down.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
    </label>
    <div
      class="relative btn-group"
    >
      <input
        aria-autocomplete="list"
        aria-labelledby="downshift-1-label"
        autocomplete="off"
        id="downshift-1-input"
        readonly=""
        type="hidden"
        value=""
      />
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="dropdown-toggle"
        data-testid="select-dropdown__toggle"
        data-toggle="dropdown"
        id="dropdown-select"
        type="button"
      />
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render with custom toggle and option templates 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-2-label"
    class="relative"
    role="combobox"
  >
    <label
      for="dropdown-select"
      id="downshift-2-label"
    >
      <div
        class="relative flex items-center w-full flex-inline"
      >
        <div
          class="flex w-full px-4 py-3 pr-12 overflow-hidden border rounded cursor-pointer m-h-20 shadow-sm bg-theme-background border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 hover:outline-none hover:border-theme-primary"
        >
          <div
            class="flex items-center flex-inline"
          >
            <div
              class="font-semibold text-theme-neutral-800"
            >
              Select Option
            </div>
          </div>
        </div>
        <div
          class="w-12 px-4 py-5 -ml-12 text-lg pointer-events-none text-theme-neutral-dark"
        >
          <div
            class=""
          >
            <div
              class="sc-AxjAm cpczEI"
              height="1em"
              width="1em"
            >
              <svg>
                chevron-down.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
    </label>
    <div
      class="relative btn-group"
    >
      <input
        aria-autocomplete="list"
        aria-labelledby="downshift-2-label"
        autocomplete="off"
        id="downshift-2-input"
        readonly=""
        type="hidden"
        value=""
      />
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="dropdown-toggle"
        data-testid="select-dropdown__toggle"
        data-toggle="dropdown"
        id="dropdown-select"
        type="button"
      />
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render without option content 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-4-label"
    class="relative"
    role="combobox"
  >
    <label
      for="dropdown-select"
      id="downshift-4-label"
    >
      <div
        class="relative flex items-center w-full flex-inline"
      >
        <div
          class="flex w-full px-4 py-3 pr-12 overflow-hidden border rounded cursor-pointer m-h-20 shadow-sm bg-theme-background border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 hover:outline-none hover:border-theme-primary"
        >
          <div
            class="flex items-center flex-inline"
          >
            <div
              class="font-semibold text-theme-neutral-800"
            >
              Select Option
            </div>
          </div>
        </div>
        <div
          class="w-12 px-4 py-5 -ml-12 text-lg pointer-events-none text-theme-neutral-dark"
        >
          <div
            class=""
          >
            <div
              class="sc-AxjAm cpczEI"
              height="1em"
              width="1em"
            >
              <svg>
                chevron-down.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
    </label>
    <div
      class="relative btn-group"
    >
      <input
        aria-autocomplete="list"
        aria-labelledby="downshift-4-label"
        autocomplete="off"
        id="downshift-4-input"
        readonly=""
        type="hidden"
        value=""
      />
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="dropdown-toggle"
        data-testid="select-dropdown__toggle"
        data-toggle="dropdown"
        id="dropdown-select"
        type="button"
      />
    </div>
  </div>
</div>
`;
